# book-to-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
references/: claude-code-export.md  ljg-xray-book-protocol.md  skill-forging.md
src/book_to_skill/: __init__.py  cli.py  common.py  exporters.py  forge.py  importers.py  validate.py  xray.py
tests/: test_cli.py
