[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book2skill"
version = "0.1.0"
description = "Turn nonfiction books into installable skills."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["cli", "books", "skills", "markdown", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
dependencies = ["pypdf", "PyMuPDF"]

[project.optional-dependencies]
pdf = []
pdf-degraded = []
pdf-ocr = ["paddleocr"]
pdf-full = ["paddleocr"]

[project.scripts]
book2skill = "book_to_skill.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
